# ChallengeAgentesAI

./: .env.example  .gitignore  DIAGRAMA_FLUJO.md  INDICE_DOCUMENTACION.md  Makefile  README.md  README_AGENTES.md  install.bat  install.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
agentesai/: __init__.py  cli.py
agentesai/agent/: __init__.py  coordinador.py  ejecutor.py  generador.py  ofensivo.py  registry.py  sistema.py
agentesai/tools_base/: __init__.py  ldap_connector.py  tools.py
agentesai/tools_generated/: __init__.py
agentesai/tools_offensive/: __init__.py  acl_diff.py  anonymous_enum.py  ldap_nmap_nse.py  rootdse_info.py  self_password_change.py  simple_vs_sasl_bind.py  starttls_test.py
tests/: __init__.py
tests/unit/: test_coordinador.py  test_ejecutor.py  test_ldap_connector.py  test_sistema_agentes.py  test_tools_base.py
