[tool.poetry]
name = "agentesai"
version = "0.1.0"
description = "Sistema de Agentes AI Auto-Adaptativos para Offensive Security"
authors = ["Rockysec"]
readme = "README.md"
packages = [{include = "agentesai"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.2.0"
google-generativeai = "^0.8.0"
python-dotenv = "^1.0.0"
ldap3 = "^2.9.0"
pydantic = "^2.0.0"
rich = "^13.0.0"
click = "^8.0.0"
python-ldap = "^3.4.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
agentesai = "agentesai.cli:main" 